# builder-agents

./: .gitignore  02-Kernel.md  AGENTS.md  BluePrint.md  Cargo.toml
.config/: nextest.toml  tenets.toml
crates/coa-artifact/: AGENTS.md  Cargo.toml
crates/coa-artifact/src/: artifact.rs  artifact_type.rs  delta.rs  hash.rs  lib.rs  merkle.rs  path.rs
crates/coa-artifact/src/types/: binary.rs  code.rs  config.rs  mod.rs  spec.rs
crates/coa-composition/: Cargo.toml
crates/coa-composition/src/: commutative.rs  hybrid.rs  lib.rs  ordered.rs  registry.rs  single_writer.rs  strategy.rs
crates/coa-constitutional/: Cargo.toml
crates/coa-constitutional/src/: cache.rs  error.rs  layer.rs  lib.rs
crates/coa-constitutional/src/parsers/: code.rs  json.rs  markdown.rs  mod.rs  yaml.rs
crates/coa-core/: AGENTS.md  Cargo.toml
crates/coa-core/src/: agent_pool.rs  coa.rs  decomposition.rs  error.rs  lib.rs  types.rs
crates/coa-kernel/: AGENTS.md  Cargo.toml  ReadMe.md
crates/coa-kernel/src/: api.rs  error.rs  lib.rs  main.rs  validated_graph.rs
crates/coa-kernel/src/construction/: validator.rs
crates/coa-kernel/src/dag/: mod.rs
crates/coa-kernel/src/directives/: mod.rs
crates/coa-kernel/src/resource/: mod.rs
crates/coa-kernel/src/state_machine/: mod.rs
crates/coa-kernel/src/test_harness/: mod.rs  simulator.rs
crates/coa-kernel/src/types/: v2.rs
crates/coa-kernel/tests/: dag_tests.rs  handle_tests.rs  log_tests.rs  negative_tests.rs  state_tests.rs  stress_test.rs  token_tests.rs
crates/coa-kernel/tests/integration/: mod.rs
crates/coa-opencode/: AGENTS.md  Cargo.toml
crates/coa-opencode/examples/: server.rs
crates/coa-opencode/src/: backend.rs  client.rs  config.rs  lib.rs
crates/coa-symbol/: Cargo.toml
crates/coa-symbol/src/: index.rs  lib.rs  symbol.rs  validation.rs
crates/coa-test-utils/: Cargo.toml
crates/coa-test-utils/src/: lib.rs
docs/: BluePrint.md  NextSteps.md  ReadMe.md  coa-gaps.md  implementation-plan-coa-constitutional-core.md
docs/01-BluePrint/: 01-intro.md  02-architecture.md  03-security.md  04-agent-model.md  05-operations.md  06-composition-strategies.md
docs/02-Kernel/: 01-spec.md  02-api.md  03-simulator.md  04-test-spec.md  05-certify.md  06-cicd.md  06-impl-notes.md  07-migration-plan.md
docs/03-Implementation-Plan/: 01-overview.md  02-artifact-system.md  03-symbolref-system.md  04-composition-strategies.md  05-constitutional-layer.md  06-coa-core.md  07-test-strategy.md  08-workspace-setup.md  09-open-source-strategy.md
docs/03-StructuralGraph/: 01-Requirements.md  02-components.md
kernel/: Cargo.toml  IMPLEMENTATION_GAP_ANALYSIS.md  ReadMe.md  nextest.toml
kernel/src/: api.rs  error.rs  handle.rs  lib.rs  main.rs  token_integrity.rs
kernel/src/autonomy/: mod.rs
kernel/src/compliance/: mod.rs
kernel/src/construction/: builder.rs  issuer.rs  mod.rs
kernel/src/dag/: mod.rs
kernel/src/executor/: mod.rs
kernel/src/expansion/: mod.rs
kernel/src/isolation/: mod.rs
kernel/src/logging/: mod.rs
kernel/src/resource/: mod.rs
kernel/src/scheduler/: mod.rs
kernel/src/state_machine/: mod.rs
kernel/src/test_harness/: mod.rs  simulator.rs
kernel/src/types/: mod.rs
kernel/tests/: dag_tests.rs  handle_tests.rs  negative_tests.rs  stress_test.rs  token_tests.rs
tests/: report.rs
tests/integration/: artifact_delta_and_merkle_plan.rs  artifact_foundation_plan.rs  kernel_two_phase_plan.rs  no_direct_io_plan.rs  orchestration_and_errors_plan.rs  performance_and_scaling_plan.rs  security_and_autonomy_plan.rs  single_writer_composition_plan.rs
tests/system_plans/: config_migration_plan.rs  factory_code_change_plan.rs  failure_and_escalation_plan.rs  image_pipeline_plan.rs  multiverse_experiment_plan.rs  renovator_rewrite_plan.rs  research_sandbox_docs_plan.rs  sketchpad_prototype_plan.rs
