# COA (Constitutional Operational Architecture) Workspace
# High-performance, extensible, strongly-typed agent orchestration layer

[workspace]
members = [
    "crates/coa-kernel",
    "crates/coa-artifact",
    "crates/coa-symbol",
    "crates/coa-composition",
    "crates/coa-constitutional",
    "crates/coa-core",
    "crates/coa-test-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["COA Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/coa"
rust-version = "1.75"

[workspace.dependencies]
# Internal dependencies
coa-kernel = { path = "crates/coa-kernel", version = "0.1.0" }
coa-artifact = { path = "crates/coa-artifact", version = "0.1.0" }
coa-symbol = { path = "crates/coa-symbol", version = "0.1.0" }
coa-composition = { path = "crates/coa-composition", version = "0.1.0" }
coa-constitutional = { path = "crates/coa-constitutional", version = "0.1.0" }
coa-core = { path = "crates/coa-core", version = "0.1.0" }
coa-test-utils = { path = "crates/coa-test-utils", version = "0.1.0" }

# Async runtime
tokio = { version = "1.43", features = ["full", "parking_lot"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Cryptography & Hashing
sha2 = "0.10"
blake3 = "1.6"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.9"
hex = "0.4"

# Data Structures (Open Source - Prefer over custom)
rs_merkle = "1.4"
radix_trie = "0.2"
crdts = "7.3"
im = "15.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Collections / Concurrency
dashmap = "6.1"
parking_lot = "0.12"
rayon = "1.10"
crossbeam = "0.8"

# Parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
pulldown-cmark = "0.13"

# Schema
schemars = "0.8"
jsonschema = "0.17"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.28"
metrics = "0.24"

# Testing
proptest = "1.6"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
mockall = "0.13"
tempfile = "3"
pretty_assertions = "1.4"

# Utilities
uuid = { version = "1.15", features = ["v4", "serde"] }
ulid = { version = "1.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
regex = "1.11"
indexmap = "2.7"
smallvec = "1.14"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true

[profile.bench]
inherits = "release"
debug = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

