[package]
name = "coa-artifact"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Typed artifact system with content-addressed storage"

[dependencies]
# Core serialization
serde.workspace = true
serde_json.workspace = true

# Hashing
blake3.workspace = true
sha2.workspace = true
hex.workspace = true
rs_merkle.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
