[package]
name = "coa-composition"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Composition system for COA - graph construction and orchestration"

[dependencies]

[lints]
workspace = true
