[package]
name = "coa-constitutional"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Constitutional compliance and policy validation for COA"

[dependencies]

[lints]
workspace = true
