[package]
name = "coa-symbol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Content-addressed symbolic references with radix tree index"

[dependencies]
# Core
coa-artifact.workspace = true

# Collections
dashmap.workspace = true
parking_lot.workspace = true
radix_trie = "0.2"

# Serialization
serde = { workspace = true, features = ["derive"] }
hex.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
