[package]
name = "coa-symbol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Symbol reference system with content-addressed indexing"

[dependencies]
# Core dependency
coa-artifact = { path = "../coa-artifact" }

# Collections
radix_trie.workspace = true
dashmap.workspace = true

# Serialization
serde.workspace = true
hex.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
