[package]
name = "coa-test-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Testing utilities for COA workspace"

[dependencies]
coa-artifact.workspace = true
coa-core.workspace = true
[lints]
workspace = true
